# MathAgentBench

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Sandbox.Dockerfile  claude-45-next-steps.md  docker-compose.yml  justfile  main.py  pyproject.toml
benchmarks/: README.md  mock_subset.json
docs/: architecture.md  contributing.md
src/mathagentbench/: __init__.py  cli.py
src/mathagentbench/agents/: __init__.py  base.py  react.py  reflexion.py
src/mathagentbench/core/: __init__.py  evaluator.py  failure_case.py  metrics.py  problem.py  storage.py
src/mathagentbench/llm/: __init__.py  client.py
src/mathagentbench/tools/: __init__.py  docker_repl.py  registry.py  symbolic.py
src/mathagentbench/ui/: app.py
tests/: conftest.py  test_agents.py  test_cli.py  test_docker_repl.py  test_evaluator.py  test_llm_client.py  test_metrics.py  test_problem.py  test_react_agent.py  test_reflexion_agent.py  test_scoring.py  test_storage.py  test_symbolic.py  test_tools.py
