[project]
name = "mathagentbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "docker>=7.1.0",
    "gradio>=5.49.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = ["pytest>=8.4.2", "pytest-cov>=7.0.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
