[project]
name = "mathagentbench"
version = "0.1.0"
description = "Evaluation framework for LLM agents on math problems"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "docker>=7.1.0",
    "gradio>=5.49.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "sympy>=1.14.0",
    "tenacity>=9.1.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mathagent = "mathagentbench.cli:cli"


[dependency-groups]
dev = [
    "pytest>=8.4.2",
 "pytest-cov>=7.0.0",
 "respx>=0.22.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ['tests']
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]


[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
